--- a/frontend/src/styles/TopNavigationBar.scss
+++ b/frontend/src/styles/TopNavigationBar.scss
@@ -21,10 +21,11 @@
 .nav-topics {
   display: flex;
   gap: 16px;
-  margin-right: auto; /* Add this to push the topics to the right */
+  margin-left: auto; /* Add this to push the topics to the right */
 }
 
 .favourites-notification {
   display: flex;
   align-items: center;
+  margin-left: 16px; /* Add this to ensure some space between the topics and the notification icon */
 }
